# screensaver-wgpu

./: CLAUDE.md  Cargo.toml  flake.nix  main.rs  shell.nix
scripts/: play-video.sh  record.sh  render_all.sh  run-riva.sh  run.sh  screensaver.sh  stream-from-riva.sh  stream-headless.sh  stream-offscreen.sh  switch-shader.sh  thunder-autostop.sh
shaders/cuda/: abyss.py  anima.py  genesis_cuda.py  kaleidoscope.py  nebula.py  zen.py
shaders/glsl/: genesis-shadertoy.glsl
src/: main.rs  shader-anima.wgsl  shader-electric.wgsl  shader-fractal.wgsl  shader-genesis.wgsl  shader-liquid.wgsl  shader-mandala.wgsl  shader-mandelbrot.wgsl  shader-minimal.wgsl  shader-night.wgsl  shader-ocean.wgsl  shader-plasma.wgsl  shader-prism.wgsl  shader-sierpinski.wgsl  shader-zen.wgsl  shader.wgsl  stream-from-riva.sh
src/shaders/: mandelbrot.wgsl  plasma.wgsl  sierpinski.wgsl
