[package]
name = "screensaver-wgpu"
version = "0.1.0"
edition = "2021"
description = "Minimal Wayland screensaver using wgpu"

[dependencies]
wgpu = "23"
winit = { version = "0.30", features = ["wayland"] }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
